EmployeeApp_Kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: springapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp-pod
  template:
    metadata:
      labels:
        app: springapp-pod
    spec:
      containers:
        - name: spring
          image: kristina212006/app:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: springapp-config-volume
              mountPath: /etc/config
              readOnly: true
            - name: springapp-secret-volume
              mountPath: /etc/secret
              readOnly: true
      volumes:
        - name: springapp-config-volume
          configMap:
            name: springapp-config
        - name: springapp-secret-volume
          secret:
            secretName: springapp-secret
