EmployeeApp_Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springapp-service
  namespace: springapp
spec:
  selector:
    app: springapp-pod
  ports:
    - port: 8080
      targetPort: 8080
