EmployeeApp_Kubernetes/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-service
  namespace: springapp
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgre
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgre
  namespace: springapp
spec:
  serviceName: postgre-service
  selector:
    matchLabels:
      app: postgre
  replicas: 1
  template:
    metadata:
      labels:
        app: postgre
        namespace: springapp
    spec:
      containers:
        - name: postgre
          image: kristina212006/postgre:v53
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: dbdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: postgre-pvc
