EmployeeApp_Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingreess
  namespace: springapp
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: employeeapp.finki.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springapp-service
              port:
                number: 8080
